# contracts

./: .gitignore  .travis.yml  README.md  TODO.txt
Coq/Extraction/contracts-haskell/: Makefile  README.md  contracts-haskell.cabal  stack.yaml
Coq/Extraction/contracts-haskell/.stack-work/install/x86_64-linux/lts-11.3/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  contracts-haskell-0.1.0.0  ghc-paths-0.1.0.9-jtXMj34IrEDKFvgWnrf0G  haskeline-0.7.4.2-71ICW3MJvaFJFOwdkjPdXY  intero-0.1.28  mtl-2.2.2-8XubxMJDT8QLsstvlNotkc  network-2.6.3.5-7QeClNawG4zBUywSiaHaqa  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  stm-2.4.5.0-15FdumhhnVEKazIoQZDzp1  syb-0.7-3Lq8MQxmYP07qktjI1jxu0
Coq/Extraction/contracts-haskell/.stack-work/install/x86_64-linux/lts-11.3/8.2.2/lib/x86_64-linux-ghc-8.2.2/haskeline-0.7.4.2-71ICW3MJvaFJFOwdkjPdXY/System/Console/: Haskeline.dyn_hi
Coq/Extraction/contracts-haskell/.stack-work/install/x86_64-linux/lts-11.3/8.2.2/lib/x86_64-linux-ghc-8.2.2/haskeline-0.7.4.2-71ICW3MJvaFJFOwdkjPdXY/System/Console/Haskeline/: Backend.dyn_hi  (+16 more)
Coq/Extraction/contracts-haskell/.stack-work/intero/: intero260198QS-STAGING.hs
Coq/Extraction/contracts-haskell/src/: Main.hs
Coq/Extraction/contracts-haskell/src/Contracts/: Contract.hs  ContractTranslation.hs  ContractTranslationExtracted.hs  EDSL.hs  PrettyPrinting.hs  RebindableEDSL.hs
Coq/Extraction/contracts-haskell/src/Examples/: BasePayoff.hs  PayoffToFuthark.hs  PayoffToHaskell.hs  SampleContracts.hs  TranslationExample.hs
Coq/Extraction/contracts-haskell/src/Examples/Futhark/: contracts  contracts.c  contracts.fut
(+83 files in other folders)
