name:                contracts-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/contracts-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable contracts-haskell
  hs-source-dirs:      src, src/Examples, src/Contracts
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 5
                     , time
                     , containers
                     , bytestring
                     , text
                     , template == 0.2.0.10

 other-modules: BaseTypes
                Contract
                ContractTranslation
                EDSL
                Examples.PayoffToHaskell
                Examples.SampleContracts
                Examples.TranslationExample
                HOAS
                PrettyPrinting
                RebindableEDSL
